# oembed-rs

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
scripts/: update-providers
src/: client.rs  lib.rs  providers.json
