[package]
name = "oembed"
version = "0.1.0"

authors = ["Flisk <oembed-rs@flisk.xyz>"]
description = "Simple generic implementation of oEmbed 1.0"
license = "MIT"
repository = "https://github.com/Flisk/oembed-rs"
keywords = ["oembed"]
categories = ["web-programming", "api-bindings"]

edition = "2018"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"